Fix bug 482488 memstats hanging on Mac (r=treilly)

RemoveBlock was not inserting a sentinel block when it removed a block from between 2 other blocks.
This resulted in the 2 surrounding blocks thinking they were contiguous, when they really weren't, and getting merged toghether into one block later, which led to havoc.
Now RemoveBlock inserts the sentinel, and everything is happy.